fastapi-redis-k8s/fastapi-redis/templates/fastapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: $1
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /api(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: python-api
            port:
              number: 80
